Fixing bottom margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -1010,6 +1010,10 @@ section {
         width: 100%;
     }
 
+    .flex-item:last-of-type {
+        margin-bottom: 100px;
+    }
+
     
     
 }
